@@ -1,3 +1,9 @@
+2021-03-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Improve nibble swap.
+
 2021-03-11 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* src/z80/gen.c,
